[gd_scene load_steps=2 format=3 uid="uid://i4q6y4n2x1m3p"]

[ext_resource type="Script" path="res://scenes/ui/GameOver.gd" id="1_0k4m3"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k4m3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Estatísticas:"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nível alcançado: 1"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tempo de jogo: 0:00"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inimigos derrotados: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tentar Novamente"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu Principal" 